--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -181,7 +181,7 @@
                 <header>
                     <h2>Audio</h2>
                 </header>
-                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls>Sorry, your browser doesn't support audio element</audio>
+                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls muted style="display:none;">Sorry, your browser doesn't support audio element</audio>
             </section>
             <br>
             <!-- Iframe -->
@@ -190,7 +190,7 @@
                     <h2>Iframe</h2>
                 </header>
                 <div>
-                    <iframe title="Holberton School" width="350" height="200" src="https://www.youtube.com/embed/41N6bKO-NVI">Holberton Sally</iframe>
+                    <iframe title="Holberton School" width="350" height="200" src="https://www.youtube.com/embed/41N6bKO-NVI" style="display:none;">Holberton Sally</iframe>
                 </div>
             </section>
         </main>
