--- a/0x00-html_advanced/39-styleguide.html
+++ b/0x00-html_advanced/39-styleguide.html
@@ -173,7 +173,7 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">Sorry, your browser doesn't support HTML5 video</video>
+                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" muted style="display: none;">Sorry, your browser doesn't support HTML5 video</video>
             </section>
             <br>
             <!-- Audio -->
@@ -181,7 +181,8 @@
                 <header>
                     <h2>Audio</h2>
                 </header>
-                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls>Sorry, your browser doesn't support audio element</audio>
+                <audio
+					src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls muted style="display: none;">Sorry, your browser doesn't support audio element</audio>
             </section>
         </main>
         <footer>
